# claude-usage-visualizer

./: .gitignore  AGENTS.md  AGENT_READINESS.md  BUILD_CHECKLIST.md  FINAL_FIXES_v6.md  Makefile  SECURITY_VALIDATION.md  pyproject.toml
.agents/: AGENT_READY_STATUS.md  agentfill.json
.agents/skills/repo-skill/: CHANGELOG.md  EXTRACTION_SUMMARY.md  README.md
.agents/skills/repo-skill/modules/domain/architecture/: config.md  routing.md
.agents/skills/repo-skill/modules/domain/data/: loading.md  models.md  pricing.md
.agents/skills/repo-skill/modules/domain/frontend/: css-theme.md  htmx-integration.md  javascript.md  static-assets.md  templates.md
.agents/skills/repo-skill/modules/integrations/: chartjs.md  htmx.md
.agents/skills/repo-skill/modules/patterns/: caching.md  data-loading.md  js-modules.md  storage.md
docs/: FEATURES.md  GUIDE.md  PHASE4.md  README.md  TESTING.md
docs/_archive/: ARCHIVE.md  IMPLEMENTATION_SUMMARY.md  PHASE4.1_ENHANCEMENTS.md  PHASE4.1_SUMMARY.md  PHASE4_AND_4.1_INDEX.md  PHASE4_IMPLEMENTATION.md  PHASE4_QUICK_START.md  implementation-plan.md
src/app/: config.py  main.py
src/app/data/: cache.py  loader.py  models.py  pricing.py
src/app/routers/: api.py  overview.py  projects.py  sessions.py  settings.py
src/app/static/: chart-maximize.js  charts.js  filters.js  htmx-config.js  style.css  theme.js  timezone.js
src/app/templates/: base.html  overview.html  project_detail.html  projects.html  session_detail.html  settings.html
src/app/templates/partials/: session_table.html
(+2 files in other folders)
